--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,12 @@ layout: default
 </section>
 {% include comments.md %}
 
+<!-- JiaThis Button BEGIN -->
+<script type="text/javascript">
+var jiathis_config = {data_track_clickback:'true'};
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;uid=1400122824168372" charset="utf-8"></script>
+<!-- JiaThis Button END -->
 
 <!-- 多说评论框 start -->
   <div class="ds-thread" data-thread-key="请将此处替换成文章在你的站点中的ID" data-title="请替换成文章的标题" data-url="请替换成文章的网址"></div>
