--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="{{ site.author }}" />
     <title>{% if page.path == 'index.html' %}{{ site.name }}{% else %}{% unless page.id %}{{ site.name }} - {% endunless %}{{ page.title }}{% endif %}</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/assets/logo.jpg"></link>
     <link href="/feed/" rel="alternate" title="{{ site.author }}" type="application/atom+xml" />
     <link rel="stylesheet" href="/media/css/style.css" />
     <link rel="stylesheet" href="/media/css/highlight.css" />
@@ -20,7 +20,7 @@
         <span><a title="网站首页" class="" href="/">首页</a></span>
         <span><a title="文章分类" class="" href="/categories/">分类</a></span>
         <span><a title="标签索引" class="" href="/tags/">标签</a></span>
-        <!--<span><a title="友情链接" class="" href="/links/">链接</a></span>-->
+        <span><a title="友情链接" class="" href="/links/">链接</a></span>
         <span><a title="留言交流" class="" href="/guestbook/">留言</a></span>
         <span><a title="关于站长" class="" href="/about/">关于</a></span>
         <span><a title="种子订阅" class="" href="/feed/" target="_blank">订阅</a></span>
