--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="/media/css/highlight.css" />
     <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
   </head>
+  <body>  
+    <div id="time"></div>  
+  
+      <script type="text/javascript">  
+        change();  
+      function change()  
+        {  
+          var today;  
+          today = new Date();  
+          timeString = today.toLocaleString();  
+          document.getElementById("time").innerHTML = timeString;  
+         setTimeout("change();", 1000);  
+        }  
+</script>  
+  
+</body>
   <body>
     <div id="container">
       <div id="main" role="main">
@@ -31,7 +47,9 @@
       </div>
 
     <footer>
-        <p><small>
+      <!-- 页脚编写！！！ -->
+        <p>
+          <small>
             <a href="http://github.com/{{ site.github }}/NET/new/gh-pages/_posts" target="_blank" title="撰写文章">Po</a>wer<a href="http://github.com/{{ site.github }}/NET/edit/gh-pages/{{ page.path }}" target="_blank" title="编辑页面">ed</a> by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a href="http://github.com/{{ site.github }}/NET" target="_blank" title="项目主页">GitHub</a>
              | <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/cn/" target="_blank" title="许可协议">©</a> 2004 - {{site.time | date:"%Y"}} <a href="/about/">{{ site.author }}</a>
 {% if site.beian %}
@@ -40,7 +58,8 @@
 {% if site.cnzz %}
              | <script src="http://s85.cnzz.com/stat.php?id={{ site.cnzz }}"></script>
 {% endif %}
-         </small></p>
+         </small>
+       </p>
     </footer>
 
     </div>
