--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,5 +54,6 @@ var jiathis_config = {data_track_clickback:'true'};
 
 {% include comments.md %}
 
-
+<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
+<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
 
